# dirtsim

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  capture_nes_latency_logs.sh  coding_convention.md  foo  package-lock.json  package.json  run.sh  run_debug.sh  screenshot.sh  system-status.sh  tail_remote_logs.sh  timer-stats.sh  update.sh
apps/: .gitignore  1  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SESSION_NOTES.md  SETUP_IMPROVEMENTS.md  analyze_swaps.sh  benchmark-logging-config.json  debug_latest_crash.sh  eslint.config.js  lv_conf.h  oe-logs  oe-workdir  run_debug.sh  run_debug_strace.sh  run_optimized.sh
apps/.github/workflows/: ci.yml
apps/cmake/: EmbedWebResources.cmake
apps/config/: server.json  ui.json
apps/config/pi/: README.md  dirtsim.desktop  install.sh
apps/config/pi/labwc/: autostart
apps/design_docs/: Architecture.md  GridMechanics.md  Search-mode.md  WebRTC-test-driver.md  ai-integration-ideas.md  air_steering_notes.md  coding_convention.md  entities-and-events.md  evolution-framework.md  gamepad-input.md  genetic-evolution.md  light-propagation.md  light.md  logging-channels.md  marquee_system.md  nes-heuristic-search.md  nes-smb-ram-validation.md  nes-tile-embedding-brain.md  nes-video-smoothness.md  neural-net-brain-plan.md  optimization-ideas.md  organism-structural-integrity.md  parallelization-analysis.md  plant.md  rigid-body-design.md  sleep-water-completion-plan.md  static-load-and-region-sleeping.md  water-sim-mac-projection.md
apps/hooks/: install-hooks.sh  pre-commit  pre-push
apps/scripts/: fetch_nes_test_rom.sh  os-manager-functional-tests.sh  os-manager-integration-test.sh  setup_dependencies.sh
apps/src/audio/: AudioEngine.cpp  AudioEngine.h  AudioManager.cpp  AudioManager.h  main.cpp
apps/src/audio/api/: AudioApiCommand.h  MasterVolumeSet.h  NoteOff.h  NoteOn.h  StatusGet.h
apps/src/audio/network/: CommandDeserializerJson.cpp  CommandDeserializerJson.h
apps/src/cli/: BenchmarkRunner.cpp  BenchmarkRunner.h  CleanupRunner.cpp  CleanupRunner.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandRegistry.h  FunctionalTestRunner.cpp  FunctionalTestRunner.h  GenomeDbBenchmark.cpp  GenomeDbBenchmark.h  IntegrationTest.cpp  README.md  RunAllRunner.cpp  RunAllRunner.h  SubprocessManager.cpp  SubprocessManager.h  TrainRunner.cpp  TrainRunner.h  main.cpp
apps/src/cli/examples/: wifi-functional-test.example.json
apps/src/core/: Assert.h  Cell.cpp  Cell.h  CellDebug.h  ColorMaterialMapper.cpp  ColorMaterialMapper.h  ColorNames.cpp  ColorNames.h  CommandWithCallback.h  ConfigLoader.cpp  ConfigLoader.h  Duck.h  Entity.cpp  Entity.h  EntityType.cpp  EntityType.h  FontSampler.cpp  FontSampler.h  FragmentationParams.h  GenomePoolId.cpp  GenomePoolId.h  GridBuffer.h  GridOfCells.cpp  GridOfCells.h  IconFont.cpp  IconFont.h  LightBuffer.cpp  LightBuffer.h  LightCalculatorBase.h  LightConfig.cpp  LightConfig.h  LightManager.cpp  LightManager.h  LightPropagator.cpp  LightPropagator.h  LightProperties.h  LightTypes.cpp  LightTypes.h  LoggingChannels.cpp  LoggingChannels.h  (+70 more)
apps/src/core/api/: UiUpdateEvent.h
apps/src/core/audio/: Envelope.cpp  Envelope.h  Oscillator.cpp  Oscillator.h  SynthVoice.cpp  SynthVoice.h
apps/src/core/bitmaps/: CellBitmap.cpp  CellBitmap.h  MaterialNeighborhood.cpp  MaterialNeighborhood.h
apps/src/core/encoding/: H264Encoder.cpp
apps/src/core/input/: GamepadManager.cpp  GamepadManager.h  GamepadState.h  PlayerControlFrame.cpp  PlayerControlFrame.h
apps/src/core/network/: BinaryProtocol.h  ClientHello.h  JsonProtocol.h  README.md  WebSocketService.cpp  WebSocketService.h  WebSocketServiceInterface.h  WifiManager.cpp  WifiManager.h  WifiManagerLibNm.cpp  WifiManagerLibNm.h
apps/src/core/organisms/: Body.cpp  Body.h  Bone.cpp  Bone.h  Duck.cpp  Duck.h  DuckBrain.cpp  DuckBrain.h  DuckInput.h  DuckSensoryData.cpp  DuckSensoryData.h  Goose.cpp  Goose.h  GooseBrain.cpp  GooseBrain.h  LocalCell.h  Organism.cpp  Organism.h  OrganismManager.cpp  OrganismManager.h  OrganismSensoryData.cpp  OrganismSensoryData.h  OrganismType.h  PlayerDuckBrain.h  (+12 more)
apps/src/os-manager/: Event.h  EventProcessor.cpp  EventProcessor.h  OperatingSystemManager.cpp  OperatingSystemManager.h  PeerTrust.cpp  PeerTrust.h  ProcessRunner.cpp  ProcessRunner.h  ScannerTypes.h  main.cpp
apps/src/server/: Event.h  PlanRepository.cpp  PlanRepository.h  ServerConfig.cpp  ServerConfig.h  StateMachine.cpp  StateMachine.h  TrainingResultRepository.cpp  TrainingResultRepository.h  UserSettings.cpp  UserSettings.h  UserSettingsDiskCompat.cpp  UserSettingsDiskCompat.h  main.cpp
apps/src/tests/: AudioEngine_test.cpp  Buoyancy_test.cpp  CacheCorrectness_test.cpp  Cell_serialization_test.cpp  ClockWaterTransition_test.cpp  CohesionDebug_test.cpp  CommandDispatcher_test.cpp  ConfigLoader_test.cpp  DiagonalWaterLeveling_test.cpp  HorizontalMomentum_test.cpp  MockWebSocketService.cpp  MockWebSocketService.h  RigidBodyIntegration_test.cpp  SmolnesHarness.c  SmolnesHarness.h  StrongType_test.cpp  WaterEqualization_test.cpp  WaterMacBuoyancy_test.cpp  WaterMacQuadrantEqualization_test.cpp  WaterMacStability_test.cpp  WebSocketService_integration_test.cpp  WorldRigidBodyCalculator_test.cpp
apps/src/ui/: DisplayCapture.cpp  DisplayCapture.h  InteractionMode.h  LvglEventFactory.h  PanelViewController.cpp  PanelViewController.h  README.md  RemoteInputDevice.cpp  RemoteInputDevice.h  STATE_MACHINE.md  ScenarioMetadataCache.cpp  ScenarioMetadataCache.h  ScenarioMetadataManager.cpp  ScenarioMetadataManager.h  SearchIdleView.cpp  SearchIdleView.h  SearchModeVisuals.cpp  SearchModeVisuals.h  SimPlayground.cpp  SimPlayground.h  TrainingActiveView.cpp  TrainingActiveView.h  TrainingIdleView.cpp  TrainingIdleView.h  TrainingUnsavedResultView.cpp  TrainingUnsavedResultView.h  TrainingView.cpp  TrainingView.h  UiComponentManager.cpp  UiComponentManager.h  UiConfig.h  UiServices.h  UserSettings.h  UserSettingsManager.cpp  UserSettingsManager.h  main.cpp
apps/testdata/nes/: flappy_extractor_fixture.csv
apps/testdata/roms/: rom_manifest.json
(+1331 files in other folders)
